# doc-skeleton

./: 404.html  LICENSE.template  README.md  index.html  mkdocs.yml  pyproject.toml  siteinfo.json
.github/workflows/: mkdocs-merge.yaml
docs/: extensions.md  index.fi.md  unilanguage.md
docs/example_dir/: .pages  alpha.fi.md  omega.fi.md
example_dir/alpha/: index.html
example_dir/omega/: index.html
extensions/: index.html
search/: search_index.json
