[tool.poetry]
name = "doc-skeleton"
version = "0.1.0"
description = ""
authors = ["Jani Sourander <sourander@gmail.com>"]
readme = "README.md"
# We do not actually have a package, but if we did, you would add:
# packages = [{include = "doc_skeleton"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.18"
mkdocs-static-i18n = "^0.56"
mkdocs-awesome-pages-plugin = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
